--- a/samples/python/multifactor_storage.ipynb
+++ b/samples/python/multifactor_storage.ipynb
@@ -1014,9 +1014,9 @@
     }
    ],
    "source": [
-    "sim_spot_valuation_mean = three_factor_results.sim_spot_valuation.aggregate(func='mean', axis='columns', raw = True)\n",
-    "sim_spot_valuation_90th = three_factor_results.sim_spot_valuation.aggregate(func=np.percentile, q=90, axis='columns', raw = True)\n",
-    "sim_spot_valuation_10h = three_factor_results.sim_spot_valuation.aggregate(func=np.percentile, q=10, axis='columns', raw = True)\n",
+    "sim_spot_valuation_mean = three_factor_results.sim_spot_valuation.aggregate(func='mean', axis='columns')\n",
+    "sim_spot_valuation_90th = three_factor_results.sim_spot_valuation.aggregate(func=np.percentile, q=90, axis='columns')\n",
+    "sim_spot_valuation_10h = three_factor_results.sim_spot_valuation.aggregate(func=np.percentile, q=10, axis='columns')\n",
     "\n",
     "sim_spot_valuation_mean.plot(title = 'Statistics of Simulated Spot Prices', legend=True)\n",
     "fwd_curve['2021-04-25' : '2022-04-01'].plot(legend=True)\n",
@@ -1433,7 +1433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1447,7 +1447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
