Added factors to Python results.

--- a/samples/python/scratchpads/pandas_scratchpad.ipynb
+++ b/samples/python/scratchpads/pandas_scratchpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "2022-12-29 NaN NaN NaN NaN"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,20 +119,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "factor       1          2    \n",
-      "sim          1      2   1   2\n",
-      "2022-12-25 NaN    NaN NaN NaN\n",
-      "2022-12-26 NaN    NaN NaN NaN\n",
-      "2022-12-27 NaN    NaN NaN NaN\n",
-      "2022-12-28 NaN  43.55 NaN NaN\n",
-      "2022-12-29 NaN    NaN NaN NaN\n"
+      "factor       1       2    \n",
+      "sim          1   2   1   2\n",
+      "2022-12-25 NaN NaN NaN NaN\n",
+      "2022-12-26 NaN NaN NaN NaN\n",
+      "2022-12-27 NaN NaN NaN NaN\n",
+      "2022-12-28 NaN NaN NaN NaN\n",
+      "2022-12-29 NaN NaN NaN NaN\n"
      ]
     },
     {
@@ -179,7 +179,7 @@
        "    <tr>\n",
        "      <th>2022-12-28</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>43.55</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-12-29</th>\n",
@@ -191,15 +191,15 @@
        "</div>"
       ],
       "text/plain": [
-       "sim          1      2\n",
-       "2022-12-25 NaN    NaN\n",
-       "2022-12-26 NaN    NaN\n",
-       "2022-12-27 NaN    NaN\n",
-       "2022-12-28 NaN  43.55\n",
-       "2022-12-29 NaN    NaN"
+       "sim          1   2\n",
+       "2022-12-25 NaN NaN\n",
+       "2022-12-26 NaN NaN\n",
+       "2022-12-27 NaN NaN\n",
+       "2022-12-28 NaN NaN\n",
+       "2022-12-29 NaN NaN"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,20 +211,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  nan,   nan,   nan,   nan],\n",
-       "       [  nan,   nan,   nan,   nan],\n",
-       "       [  nan,   nan,   nan,   nan],\n",
-       "       [  nan, 43.55,   nan,   nan],\n",
-       "       [  nan,   nan,   nan,   nan]])"
+       "array([[nan, nan, nan, nan],\n",
+       "       [nan, nan, nan, nan],\n",
+       "       [nan, nan, nan, nan],\n",
+       "       [nan, nan, nan, nan],\n",
+       "       [nan, nan, nan, nan]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "           names=['factor', 'sim'])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,6 +269,86 @@
     "num_sims=5\n",
     "factor_sims_cols=pd.MultiIndex.from_product((range(num_factors), range(num_sims)), names=('factor', 'sim'))\n",
     "factor_sims_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factor_sims_cols.nlevels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4], dtype='int64', name='sim')"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factor_sims_cols.get_level_values(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4], dtype='int64', name='sim')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factor_sims_cols.get_level_values('sim')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 4, 4)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple([1, 4, 4])"
    ]
   }
  ],
