--- a/samples/python/scratchpads/pandas_scratchpad.ipynb
+++ b/samples/python/scratchpads/pandas_scratchpad.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fowle\\Anaconda3\\lib\\site-packages\\pandas\\compat\\_optional.py:138: UserWarning: Pandas requires version '2.7.0' or newer of 'numexpr' (version '2.6.8' currently installed).\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +115,7 @@
        "2022-12-29 NaN NaN NaN NaN"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +208,7 @@
        "2022-12-29 NaN NaN"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +233,7 @@
        "       [nan, nan, nan, nan]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +268,7 @@
        "           names=['factor', 'sim'])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +291,7 @@
        "2"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +311,7 @@
        "Int64Index([0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4], dtype='int64', name='sim')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +331,7 @@
        "Int64Index([0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4], dtype='int64', name='sim')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,22 +342,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 4, 4)"
+       "4"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tuple([1, 4, 4])"
+    "len(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-33-dd9b6f3d290c>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-33-dd9b6f3d290c>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    df2 = df[(:, 1)]\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = df[(1, 1)]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  C_CONTIGUOUS : False\n",
+      "  F_CONTIGUOUS : True\n",
+      "  OWNDATA : False\n",
+      "  WRITEABLE : True\n",
+      "  ALIGNED : True\n",
+      "  WRITEBACKIFCOPY : False\n",
+      "  UPDATEIFCOPY : False\n",
+      "\n",
+      "  C_CONTIGUOUS : False\n",
+      "  F_CONTIGUOUS : True\n",
+      "  OWNDATA : False\n",
+      "  WRITEABLE : True\n",
+      "  ALIGNED : True\n",
+      "  WRITEBACKIFCOPY : False\n",
+      "  UPDATEIFCOPY : False\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.values.flags)\n",
+    "print(df2.values.flags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 40)\n",
+      "(8,)\n",
+      "(5, 4)\n",
+      "(5,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.values.strides)\n",
+    "print(df2.values.strides)\n",
+    "\n",
+    "print(df.values.shape)\n",
+    "print(df2.values.shape)\n",
+    "\n"
    ]
   }
  ],
