Added Python unit test for value_from_sims, fixed bug and tidy some code, but unit test still failing.

--- a/samples/python/scratchpads/pandas_scratchpad.ipynb
+++ b/samples/python/scratchpads/pandas_scratchpad.ipynb
@@ -414,6 +414,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.values.reshape?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
