Make factors optional and start work on documentation.

--- a/samples/python/multifactor_storage.ipynb
+++ b/samples/python/multifactor_storage.ipynb
@@ -26,6 +26,8 @@
     "        * [Factor Correlations](#Factor-Correlations)\n",
     "        * [Multi-Factor Basis Functions](#Multi-Factor-Basis-Functions)\n",
     "    * [Calling the Multi Factor Model](#Calling-the-Multi-Factor-Model)\n",
+    "* [User Specified Price Simulations](#User-Specified-Price-Simulations)\n",
+    "    * [Calling the Model With Externally Provided Simulations](#Calling-the-Model-With-Externally-Provided-Simulations)\n",
     "* [Valuation Results](#Valuation-Results)\n",
     "    * [NPV Properties](#NPV-Properties)\n",
     "    * [Deltas](#Deltas)\n",
@@ -142,7 +144,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca852da0f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e28fba9860>"
       ]
      },
      "execution_count": 3,
@@ -188,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca873db860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e292cc0860>"
       ]
      },
      "execution_count": 4,
@@ -531,8 +533,24 @@
    "metadata": {},
    "source": [
     "***\n",
+    "## User Specified Price Simulations\n",
+    "Should users which to use any other model for price dynamics, the **value_from_sims** function runs the same pricing algorithm, but with price simulation data provided as arguments. The parameters to **value_from_sims** are mostly the same as for the two other pricing functions. The following four parameters are used to specify the price dynamics:\n",
+    "* **sim_spot_regress** is a pandas.DataFrame holding the spot price simulations used in the regression step to calculate the expected value polynomials. The index of this DataFrame should be a pandas.PeriodIndex with the same frequency as that used to create the CmdtyStorage instance. Indices should be provided for all future active periods of the storage. Each column of this DataFrame contains a single simulation path, so the number of columns will equal the number of simulations.\n",
+    "* **sim_spot_valuation** is a pandas.DataFrame holding the spot price simulations used in the valuation step of the LSMC algorithm. During this step optimal decisions are calculated going forward in time using spot prices in this argument and the polynomials calculated in the regression step. The structure of this DataFrame is identical to that of sim_spot_regress described above.\n",
+    "* **sim_factors_regress** is an optional iterable of pandas.DataFrame containing the (usually) Markovian factors driving the spot prices in sim_spot_regress. Whether this argument is provided depends on whether the factors are present in the basis_funcs argument provided. For a single factor model it will not generally be necessary for the factor to be included in the regression, hence this argument can be omitted. However, is typical the for a multi-factor model that the factors should be included in basis_funcs, hence sim_factors_regress should be provided by the caller. Each element of this iterable should contain the simulation data for each factor, hence len(sim_factors_regress) will equal the number of factors. Each DataFrame element of this will have the same structure as described for sim_spot_regress, with storage periods as the index and columns containing each simulation path.\n",
+    "* **sim_factors_valuation** is an optional iterable of pandas.DataFrame and is the equivalent of sim_factor_regress, except it contains the factors driving sim_spot_valuation. The structure of the data should be identical to that of sim_factors_regress, with the number of elements equal to the number of factors.\n",
+    "\n",
+    "#### Calling the Model With Externally Provided Simulations\n",
+    "Below is an example of calling **value_from_sims**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
     "## Valuation Results\n",
-    "Both functions **three_factor_seasonal_value** and **multi_factor_value** return instances of **MultiFactorValuationResults**. This class derives from NamedTuple and has many properties for the results of the optimisation, plus other calculation metadata. The subsections below describe these properties.\n",
+    "The functions **three_factor_seasonal_value**, **multi_factor_value** and **value_from_sims** all return instances of **MultiFactorValuationResults**. This class derives from NamedTuple and has many properties for the results of the optimisation, plus other calculation metadata. The subsections below describe these properties.\n",
     "\n",
     "### NPV Properties\n",
     "The the following attributes give information on the NPV (Net Present Value):\n",
@@ -578,7 +596,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ca90e25a20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e29944cef0>"
       ]
      },
      "execution_count": 16,
@@ -941,7 +959,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ca9505c898>"
+       "<matplotlib.legend.Legend at 0x1e28fb21f98>"
       ]
      },
      "execution_count": 18,
@@ -1004,7 +1022,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ca95ffcfd0>"
+       "<matplotlib.legend.Legend at 0x1e2a06b8320>"
       ]
      },
      "execution_count": 19,
@@ -1045,16 +1063,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ca976cb668>"
+       "<matplotlib.legend.Legend at 0x1e2a06a60f0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1094,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1279,7 @@
        "[342 rows x 6 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,13 +1304,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "405e4c7c256a43a39090f68523b3309d",
+       "model_id": "86ab6c70d0874f0c8b154301bf3545ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1306,7 +1324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "965257aef76b40b49f2b7e21085d3df1",
+       "model_id": "4404f8efd2d94671bc6ccd0b6157a056",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1360,13 +1378,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f044598fdfe446cb11cb5cc13588e10",
+       "model_id": "77e29113628144c2bfa91ec63f5a5811",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1380,7 +1398,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bff4283695264d1b9a5556819bf81659",
+       "model_id": "9443ad5a8b5a4a4883770a91d7099875",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1394,7 +1412,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e5bec1775b44d0a80ba034c7b7b2a7e",
+       "model_id": "c9abc1ee932d4e6d9290174ac9112401",
        "version_major": 2,
        "version_minor": 0
       },
