Updated notebook to include example of value_from_sims.

--- a/samples/python/multifactor_storage.ipynb
+++ b/samples/python/multifactor_storage.ipynb
@@ -58,21 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fowle\\Anaconda3\\lib\\site-packages\\pandas\\compat\\_optional.py:138: UserWarning: Pandas requires version '2.7.0' or newer of 'numexpr' (version '2.6.8' currently installed).\n",
-      "  warnings.warn(msg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Common Imports\n",
-    "from cmdty_storage import CmdtyStorage, three_factor_seasonal_value, multi_factor_value, RatchetInterp\n",
+    "from cmdty_storage import CmdtyStorage, three_factor_seasonal_value, multi_factor_value, RatchetInterp, value_from_sims\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import ipywidgets as ipw\n",
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1e28fba9860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x224b2453240>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -184,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1e292cc0860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x224b455d780>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -230,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +360,7 @@
        "'69,524'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +495,7 @@
        "'63,505'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,14 +525,79 @@
    "source": [
     "***\n",
     "## User Specified Price Simulations\n",
-    "Should users which to use any other model for price dynamics, the **value_from_sims** function runs the same pricing algorithm, but with price simulation data provided as arguments. The parameters to **value_from_sims** are mostly the same as for the two other pricing functions. The following four parameters are used to specify the price dynamics:\n",
+    "Should users wish to use any other model for price dynamics, the **value_from_sims** function runs the same pricing algorithm, but with price simulation data provided as arguments. The parameters to **value_from_sims** are mostly the same as for the two other pricing functions, except the following four parameters which are used to specify the simulated data:\n",
     "* **sim_spot_regress** is a pandas.DataFrame holding the spot price simulations used in the regression step to calculate the expected value polynomials. The index of this DataFrame should be a pandas.PeriodIndex with the same frequency as that used to create the CmdtyStorage instance. Indices should be provided for all future active periods of the storage. Each column of this DataFrame contains a single simulation path, so the number of columns will equal the number of simulations.\n",
-    "* **sim_spot_valuation** is a pandas.DataFrame holding the spot price simulations used in the valuation step of the LSMC algorithm. During this step optimal decisions are calculated going forward in time using spot prices in this argument and the polynomials calculated in the regression step. The structure of this DataFrame is identical to that of sim_spot_regress described above.\n",
-    "* **sim_factors_regress** is an optional iterable of pandas.DataFrame containing the (usually) Markovian factors driving the spot prices in sim_spot_regress. Whether this argument is provided depends on whether the factors are present in the basis_funcs argument provided. For a single factor model it will not generally be necessary for the factor to be included in the regression, hence this argument can be omitted. However, is typical the for a multi-factor model that the factors should be included in basis_funcs, hence sim_factors_regress should be provided by the caller. Each element of this iterable should contain the simulation data for each factor, hence len(sim_factors_regress) will equal the number of factors. Each DataFrame element of this will have the same structure as described for sim_spot_regress, with storage periods as the index and columns containing each simulation path.\n",
+    "* **sim_spot_valuation** is a pandas.DataFrame holding the spot price simulations used in the valuation step of the LSMC algorithm. During this step optimal decisions are calculated going forward in time using the spot prices provided in this argument, and the polynomials calculated in the regression step. The structure of this DataFrame is identical to that of sim_spot_regress described above.\n",
+    "* **sim_factors_regress** is an optional iterable of pandas.DataFrame containing the (usually) Markovian factors driving the spot prices in sim_spot_regress. Whether this argument is provided depends on whether the factors are present in the basis_funcs argument. For a single factor model it will not generally be necessary for the factor to be included in the regression, hence this argument can be omitted. However, it is typical (and closer to optimal) for a multi-factor model that the factors should be included in basis_funcs, hence sim_factors_regress should be provided by the caller. Each element of this iterable should contain the simulation data for each factor, hence len(sim_factors_regress) will equal the number of factors. Each DataFrame element of this will have the same structure as described for sim_spot_regress, with storage periods as the index and columns containing the simulation paths.\n",
     "* **sim_factors_valuation** is an optional iterable of pandas.DataFrame and is the equivalent of sim_factor_regress, except it contains the factors driving sim_spot_valuation. The structure of the data should be identical to that of sim_factors_regress, with the number of elements equal to the number of factors.\n",
     "\n",
     "#### Calling the Model With Externally Provided Simulations\n",
-    "Below is an example of calling **value_from_sims**"
+    "Below is an example of calling **value_from_sims** with a 2-factor model which has been contrived for just the purpose of a simple demonstration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'59,337'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2-Factor model parameters\n",
+    "lt_vol_2f = 0.2\n",
+    "st_vol_2f = 0.6\n",
+    "mr_2f = 0.3\n",
+    "\n",
+    "start_sim = pd.Period(val_date, freq='D')+1\n",
+    "sim_periods = pd.period_range(start=start_sim, end=storage.end)\n",
+    "num_sim_periods = len(sim_periods)\n",
+    "\n",
+    "sqrt_dt = np.sqrt(1/365.0)\n",
+    "lt_step_stan_dev = lt_vol_2f * sqrt_dt\n",
+    "def generate_2f_sims():\n",
+    "    norms_factor_1 = np.random.normal(loc=0.0, scale=lt_step_stan_dev, size=(num_sim_periods, num_sims))\n",
+    "    factor_1_sims_array = np.cumsum(norms_factor_1, axis=0)\n",
+    "    factor_1_sims_data_frame = pd.DataFrame(data=factor_1_sims_array, index=sim_periods)\n",
+    "    st_step_stan_dev = st_vol_2f * sqrt_dt\n",
+    "    norms_factor_2 = np.random.normal(loc=0.0, scale=st_step_stan_dev, size=(num_sim_periods, num_sims))\n",
+    "    factor_2_sims_array = np.zeros(shape=(num_sim_periods, num_sims))\n",
+    "    factor_2_sims_array[0] = norms_factor_2[0]\n",
+    "    for i in range(1, num_sim_periods):\n",
+    "        factor_2_sims_array[i] = factor_2_sims_array[i-1]*(1.0 - mr_2f) + norms_factor_2[i]\n",
+    "    factor_2_sims_data_frame = pd.DataFrame(data=factor_2_sims_array, index=sim_periods)\n",
+    "    # No drift adjustment despite exponential, so not fitted to curve, and of no use in practice\n",
+    "    sims_spot_prices_data = np.matmul(np.diag(fwd_curve[sim_periods].values), np.exp(factor_1_sims_array + factor_2_sims_array))\n",
+    "    sims_spot_prices_data_frame = pd.DataFrame(data=sims_spot_prices_data, index=sim_periods)\n",
+    "    return sims_spot_prices_data_frame, (factor_1_sims_data_frame, factor_2_sims_data_frame)\n",
+    "\n",
+    "sim_spot_regress, sim_factors_regress = generate_2f_sims()\n",
+    "sim_spot_valuation, sim_factors_valuation = generate_2f_sims()\n",
+    "two_factor_basis_funcs = '1 + x0 + x1 + s + x0**2 + x1**2 + s**2 + x0*x1 + x1*s + x0*s'\n",
+    "\n",
+    "value_from_sims_results = value_from_sims(\n",
+    "    cmdty_storage = storage,\n",
+    "    val_date = val_date,\n",
+    "    inventory = inventory,\n",
+    "    fwd_curve = fwd_curve,\n",
+    "    interest_rates = ir_curve,\n",
+    "    settlement_rule = settlement_rule,\n",
+    "    discount_deltas=discount_deltas,\n",
+    "    sim_spot_regress = sim_spot_regress,\n",
+    "    sim_factors_regress = sim_factors_regress,\n",
+    "    sim_spot_valuation = sim_spot_valuation,\n",
+    "    sim_factors_valuation = sim_factors_valuation,\n",
+    "    basis_funcs = two_factor_basis_funcs\n",
+    ")\n",
+    "'{0:,.0f}'.format(value_from_sims_results.npv)"
    ]
   },
   {
@@ -561,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -590,16 +646,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1e29944cef0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x224be637cf8>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -630,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +853,7 @@
        "[342 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -959,10 +1015,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e28fb21f98>"
+       "<matplotlib.legend.Legend at 0x224be8eb128>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1016,16 +1072,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e2a06b8320>"
+       "<matplotlib.legend.Legend at 0x224c1390390>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1063,16 +1119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e2a06a60f0>"
+       "<matplotlib.legend.Legend at 0x224c1337b00>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1112,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1335,7 @@
        "[342 rows x 6 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,13 +1360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86ab6c70d0874f0c8b154301bf3545ab",
+       "model_id": "5fb0c0a3e07744f49a5a9ecd075b7b2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1324,7 +1380,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4404f8efd2d94671bc6ccd0b6157a056",
+       "model_id": "b832ca99d9b647ecb160f69bb42e1ee2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1378,13 +1434,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77e29113628144c2bfa91ec63f5a5811",
+       "model_id": "58083bbc5bad4063b746f1e08fb65927",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1398,7 +1454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9443ad5a8b5a4a4883770a91d7099875",
+       "model_id": "c29cd6cb43224786ba9dce7cf12a7e7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1412,7 +1468,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9abc1ee932d4e6d9290174ac9112401",
+       "model_id": "e52d5d1a0727473f84d8db097acef2bd",
        "version_major": 2,
        "version_minor": 0
       },
