--- a/samples/python/scratchpads/pandas_scratchpad.ipynb
+++ b/samples/python/scratchpads/pandas_scratchpad.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
        "4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,16 +362,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-33-dd9b6f3d290c>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-33-dd9b6f3d290c>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    df2 = df[(:, 1)]\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2022-12-25   NaN\n",
+       "2022-12-26   NaN\n",
+       "2022-12-27   NaN\n",
+       "2022-12-28   NaN\n",
+       "2022-12-29   NaN\n",
+       "Freq: D, Name: (1, 1), dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -381,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +403,7 @@
       "  WRITEBACKIFCOPY : False\n",
       "  UPDATEIFCOPY : False\n",
       "\n",
-      "  C_CONTIGUOUS : False\n",
+      "  C_CONTIGUOUS : True\n",
       "  F_CONTIGUOUS : True\n",
       "  OWNDATA : False\n",
       "  WRITEABLE : True\n",
@@ -414,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -444,6 +451,120 @@
     "print(df.values.shape)\n",
     "print(df2.values.shape)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Period('2022-12-26', 'D')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.date_range?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-03-01 00:00:00+00:00\n",
+      "2023-03-01 23:00:00+00:00\n",
+      "DatetimeIndex(['2023-03-01 00:00:00+00:00', '2023-03-01 01:00:00+00:00',\n",
+      "               '2023-03-01 02:00:00+00:00', '2023-03-01 03:00:00+00:00',\n",
+      "               '2023-03-01 04:00:00+00:00', '2023-03-01 05:00:00+00:00',\n",
+      "               '2023-03-01 06:00:00+00:00', '2023-03-01 07:00:00+00:00',\n",
+      "               '2023-03-01 08:00:00+00:00', '2023-03-01 09:00:00+00:00',\n",
+      "               '2023-03-01 10:00:00+00:00', '2023-03-01 11:00:00+00:00',\n",
+      "               '2023-03-01 12:00:00+00:00', '2023-03-01 13:00:00+00:00',\n",
+      "               '2023-03-01 14:00:00+00:00', '2023-03-01 15:00:00+00:00',\n",
+      "               '2023-03-01 16:00:00+00:00', '2023-03-01 17:00:00+00:00',\n",
+      "               '2023-03-01 18:00:00+00:00', '2023-03-01 19:00:00+00:00',\n",
+      "               '2023-03-01 20:00:00+00:00', '2023-03-01 21:00:00+00:00',\n",
+      "               '2023-03-01 22:00:00+00:00', '2023-03-01 23:00:00+00:00'],\n",
+      "              dtype='datetime64[ns, Europe/London]', freq='H')\n",
+      "2023-03-01 00:00\n",
+      "2023-03-01 00:00:00+00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "tz=\"Europe/London\"\n",
+    "start = pd.Timestamp(day=1, month=3, year=2023, tz=tz)\n",
+    "print(start)\n",
+    "end = pd.Timestamp(day=1, month=3, year=2023, hour=23, tz=tz)\n",
+    "print(end)\n",
+    "rng = pd.date_range(start, end, freq='H')\n",
+    "print(rng)\n",
+    "start_period = pd.Period(start, freq='H')\n",
+    "print(start_period)\n",
+    "start_ts = start_period.to_timestamp().tz_localize(tz)\n",
+    "print(start_ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timedelta('2 days 00:00:00')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ts1 = pd.Timestamp('2023-02-02')\n",
+    "ts2 = pd.Timestamp('2023-02-04')\n",
+    "td = ts2 - ts1\n",
+    "td"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.sinh?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng.searchsorted?"
    ]
   }
  ],
